bynkc/tests/fixtures/negative/238_invariant_after_handler/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String

  store count: Cell[Int]

  on call bump() -> Effect[()] {
    let cur = count
    count := cur + 1
    ()
  }

  invariant bad:
    count >= 0
}
